<resources>
    <string name="app_name" translatable="false">BI£€N$io</string>
    <string name="titleApp" translatable="false">Budget Application</string>
    <string name="step2" translatable="false">Step2</string>

    <string name="step1" translatable="false">Step1</string>
    <string name="logoImage">picture of the logo</string>
    <string name="signup">Sign-up</string>
    <string name="signin">Sign-in</string>
    <string name="pictureUsername">picture of the username</string>
    <string name="picturePassword">picture of the password</string>
    <string name="errorMessage">Identifiants inccorects</string>
    <string name="login">Login</string>
    <string name="enterYourCapital">Enter your capital</string>
    <string name="chooseCategories">Choose the catgories</string>
    <string name="capital">Capital</string>
    <string name="expenses">Expenses</string>
    <string name="receipts">receipts</string>
    <string name="todo">TODO</string>
    <string name="settings">settings</string>
    <string name="account">account</string>
    <string name="app_title" translatable="false">BI£€N$io</string>

    <string name="dark_theme">Dark theme</string>
    <string name="apply">Apply</string>
    <string name="dollar" translatable="false">$</string>
    <string name="language">Language</string>
    <string name="create_account">Create Account</string>
    <string name="homeconnected" translatable="false">HomeConnected</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="go">Go</string>
    <string name="keep_me_logged_in">Keep Me Logged in</string>
    <string name="good2seeU">Good to see you sir</string>

    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="select_your_currency">Select your currency</string>
    <string name="profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="set_email">Set Email</string>
    <string name="termsAndConditons">Termes &amp; conditions</string>

    <string name="delete_account">Delete account</string>
    <string name="email">email</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="r_u_sure">Are you sure ?</string>

    <string name="mettez_votre_montant">Mettez votre montant</string>

</resources>